fix overflow-y on main container

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-self: center;
     flex: 1 1 auto;
+    overflow-y: hidden;
 }
 
 .mainWrapper {
